修改MDK下载算法

--- a/projects/art_pi2_blink_led/project.uvprojx
+++ b/projects/art_pi2_blink_led/project.uvprojx
@@ -338,9 +338,9 @@
             <v6Rtti>0</v6Rtti>
             <VariousControls>
               <MiscControls></MiscControls>
-              <Define>RT_USING_LIBC, USE_HAL_DRIVER, STM32H7S7xx, __STDC_LIMIT_MACROS, __RTTHREAD__, RT_USING_ARMLIBC, __CLK_TCK=RT_TICK_PER_SECOND</Define>
+              <Define>RT_USING_ARMLIBC, __CLK_TCK=RT_TICK_PER_SECOND, __STDC_LIMIT_MACROS, __RTTHREAD__, USE_HAL_DRIVER, STM32H7S7xx, RT_USING_LIBC</Define>
               <Undefine></Undefine>
-              <IncludePath>..\..\rt-thread\components\dfs\dfs_v1\filesystems\romfs;..\..\rt-thread\components\libc\posix\ipc;.;..\..\libraries\STM32H7RSxx_HAL_Driver\Inc;..\..\libraries\bsp_components;..\..\rt-thread\components\libc\posix\io\epoll;..\..\rt-thread\components\libc\compilers\common\extension\fcntl\octal;board\port;..\..\rt-thread\components\dfs\dfs_v1\filesystems\devfs;..\..\rt-thread\components\drivers\include;..\..\rt-thread\components\libc\compilers\common\extension;..\..\rt-thread\components\dfs\dfs_v1\include;applications;..\..\libraries\samples;board\CubeMX_Config\Appli\Core\Inc;..\..\rt-thread\components\drivers\include;..\..\rt-thread\components\finsh;..\..\libraries\CMSIS\Include;board;..\..\rt-thread\components\libc\compilers\common\include;..\..\rt-thread\libcpu\arm\common;..\..\rt-thread\components\drivers\include;..\..\libraries\drivers\include\config;..\..\rt-thread\components\libc\posix\io\eventfd;..\..\rt-thread\include;..\..\rt-thread\components\drivers\spi\sfud\inc;..\..\libraries\CMSIS\Device\ST\STM32H7RSxx\Include;..\..\rt-thread\components\drivers\spi;..\..\rt-thread\libcpu\arm\cortex-m7;..\..\libraries\drivers\include;..\..\rt-thread\components\drivers\include;..\..\libraries\drivers;..\..\rt-thread\components\libc\posix\io\poll;..\..\rt-thread\components\drivers\include;..\..\rt-thread\components\drivers\include</IncludePath>
+              <IncludePath>..\..\libraries\CMSIS\Device\ST\STM32H7RSxx\Include;..\..\rt-thread\components\dfs\dfs_v1\filesystems\devfs;..\..\libraries\drivers;..\..\rt-thread\components\libc\posix\io\poll;..\..\libraries\STM32H7RSxx_HAL_Driver\Inc;..\..\rt-thread\components\libc\compilers\common\extension\fcntl\octal;..\..\rt-thread\libcpu\arm\common;..\..\rt-thread\libcpu\arm\cortex-m7;board\port;.;..\..\rt-thread\components\drivers\include;board;..\..\libraries\bsp_components;board\CubeMX_Config\Appli\Core\Inc;..\..\rt-thread\components\libc\posix\io\epoll;..\..\rt-thread\components\drivers\include;..\..\rt-thread\components\finsh;..\..\libraries\samples;..\..\rt-thread\components\drivers\include;..\..\rt-thread\components\libc\compilers\common\extension;..\..\rt-thread\components\drivers\spi;..\..\rt-thread\components\libc\posix\io\eventfd;..\..\rt-thread\components\drivers\include;..\..\rt-thread\components\dfs\dfs_v1\include;..\..\rt-thread\components\drivers\include;..\..\rt-thread\components\drivers\spi\sfud\inc;..\..\libraries\drivers\include;..\..\libraries\CMSIS\Include;..\..\rt-thread\components\dfs\dfs_v1\filesystems\romfs;..\..\rt-thread\components\drivers\include;..\..\rt-thread\include;..\..\libraries\drivers\include\config;..\..\rt-thread\components\libc\posix\ipc;..\..\rt-thread\components\libc\compilers\common\include;applications</IncludePath>
             </VariousControls>
           </Cads>
           <Aads>
@@ -1487,19 +1487,19 @@
           <GroupName>Finsh</GroupName>
           <Files>
             <File>
-              <FileName>msh.c</FileName>
-              <FileType>1</FileType>
-              <FilePath>..\..\rt-thread\components\finsh\msh.c</FilePath>
-            </File>
-            <File>
               <FileName>msh_parse.c</FileName>
               <FileType>1</FileType>
               <FilePath>..\..\rt-thread\components\finsh\msh_parse.c</FilePath>
             </File>
             <File>
-              <FileName>msh_file.c</FileName>
+              <FileName>cmd.c</FileName>
               <FileType>1</FileType>
-              <FilePath>..\..\rt-thread\components\finsh\msh_file.c</FilePath>
+              <FilePath>..\..\rt-thread\components\finsh\cmd.c</FilePath>
+            </File>
+            <File>
+              <FileName>msh.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\..\rt-thread\components\finsh\msh.c</FilePath>
             </File>
             <File>
               <FileName>shell.c</FileName>
@@ -1507,9 +1507,9 @@
               <FilePath>..\..\rt-thread\components\finsh\shell.c</FilePath>
             </File>
             <File>
-              <FileName>cmd.c</FileName>
+              <FileName>msh_file.c</FileName>
               <FileType>1</FileType>
-              <FilePath>..\..\rt-thread\components\finsh\cmd.c</FilePath>
+              <FilePath>..\..\rt-thread\components\finsh\msh_file.c</FilePath>
             </File>
           </Files>
         </Group>
@@ -2392,59 +2392,9 @@
           <GroupName>STM32_HAL</GroupName>
           <Files>
             <File>
-              <FileName>stm32h7rsxx_hal_flash.c</FileName>
+              <FileName>stm32h7rsxx_hal_rng.c</FileName>
               <FileType>1</FileType>
-              <FilePath>..\..\libraries\STM32H7RSxx_HAL_Driver\Src\stm32h7rsxx_hal_flash.c</FilePath>
-            </File>
-            <File>
-              <FileName>startup_stm32h7r7xx.s</FileName>
-              <FileType>2</FileType>
-              <FilePath>..\..\libraries\CMSIS\Device\ST\STM32H7RSxx\Source\Templates\arm\startup_stm32h7r7xx.s</FilePath>
-            </File>
-            <File>
-              <FileName>stm32h7rsxx_hal_dma.c</FileName>
-              <FileType>1</FileType>
-              <FilePath>..\..\libraries\STM32H7RSxx_HAL_Driver\Src\stm32h7rsxx_hal_dma.c</FilePath>
-            </File>
-            <File>
-              <FileName>stm32h7rsxx_hal_adc.c</FileName>
-              <FileType>1</FileType>
-              <FilePath>..\..\libraries\STM32H7RSxx_HAL_Driver\Src\stm32h7rsxx_hal_adc.c</FilePath>
-            </File>
-            <File>
-              <FileName>stm32h7rsxx_hal_cec.c</FileName>
-              <FileType>1</FileType>
-              <FilePath>..\..\libraries\STM32H7RSxx_HAL_Driver\Src\stm32h7rsxx_hal_cec.c</FilePath>
-            </File>
-            <File>
-              <FileName>stm32h7rsxx_hal_flash_ex.c</FileName>
-              <FileType>1</FileType>
-              <FilePath>..\..\libraries\STM32H7RSxx_HAL_Driver\Src\stm32h7rsxx_hal_flash_ex.c</FilePath>
-            </File>
-            <File>
-              <FileName>stm32h7rsxx_hal_cryp_ex.c</FileName>
-              <FileType>1</FileType>
-              <FilePath>..\..\libraries\STM32H7RSxx_HAL_Driver\Src\stm32h7rsxx_hal_cryp_ex.c</FilePath>
-            </File>
-            <File>
-              <FileName>stm32h7rsxx_hal_gpio.c</FileName>
-              <FileType>1</FileType>
-              <FilePath>..\..\libraries\STM32H7RSxx_HAL_Driver\Src\stm32h7rsxx_hal_gpio.c</FilePath>
-            </File>
-            <File>
-              <FileName>stm32h7rsxx_hal_crc.c</FileName>
-              <FileType>1</FileType>
-              <FilePath>..\..\libraries\STM32H7RSxx_HAL_Driver\Src\stm32h7rsxx_hal_crc.c</FilePath>
-            </File>
-            <File>
-              <FileName>stm32h7rsxx_hal_dma_ex.c</FileName>
-              <FileType>1</FileType>
-              <FilePath>..\..\libraries\STM32H7RSxx_HAL_Driver\Src\stm32h7rsxx_hal_dma_ex.c</FilePath>
-            </File>
-            <File>
-              <FileName>stm32h7rsxx_hal_pwr.c</FileName>
-              <FileType>1</FileType>
-              <FilePath>..\..\libraries\STM32H7RSxx_HAL_Driver\Src\stm32h7rsxx_hal_pwr.c</FilePath>
+              <FilePath>..\..\libraries\STM32H7RSxx_HAL_Driver\Src\stm32h7rsxx_hal_rng.c</FilePath>
             </File>
             <File>
               <FileName>stm32h7rsxx_hal_pwr_ex.c</FileName>
@@ -2452,64 +2402,9 @@
               <FilePath>..\..\libraries\STM32H7RSxx_HAL_Driver\Src\stm32h7rsxx_hal_pwr_ex.c</FilePath>
             </File>
             <File>
-              <FileName>stm32h7rsxx_hal_xspi.c</FileName>
+              <FileName>stm32h7rsxx_hal_pwr.c</FileName>
               <FileType>1</FileType>
-              <FilePath>..\..\libraries\STM32H7RSxx_HAL_Driver\Src\stm32h7rsxx_hal_xspi.c</FilePath>
-            </File>
-            <File>
-              <FileName>stm32h7rsxx_hal_rcc_ex.c</FileName>
-              <FileType>1</FileType>
-              <FilePath>..\..\libraries\STM32H7RSxx_HAL_Driver\Src\stm32h7rsxx_hal_rcc_ex.c</FilePath>
-            </File>
-            <File>
-              <FileName>stm32h7rsxx_hal_usart.c</FileName>
-              <FileType>1</FileType>
-              <FilePath>..\..\libraries\STM32H7RSxx_HAL_Driver\Src\stm32h7rsxx_hal_usart.c</FilePath>
-            </File>
-            <File>
-              <FileName>stm32h7rsxx_hal_crc_ex.c</FileName>
-              <FileType>1</FileType>
-              <FilePath>..\..\libraries\STM32H7RSxx_HAL_Driver\Src\stm32h7rsxx_hal_crc_ex.c</FilePath>
-            </File>
-            <File>
-              <FileName>stm32h7rsxx_hal_uart.c</FileName>
-              <FileType>1</FileType>
-              <FilePath>..\..\libraries\STM32H7RSxx_HAL_Driver\Src\stm32h7rsxx_hal_uart.c</FilePath>
-            </File>
-            <File>
-              <FileName>stm32h7rsxx_hal_cryp.c</FileName>
-              <FileType>1</FileType>
-              <FilePath>..\..\libraries\STM32H7RSxx_HAL_Driver\Src\stm32h7rsxx_hal_cryp.c</FilePath>
-            </File>
-            <File>
-              <FileName>stm32h7rsxx_hal_adc_ex.c</FileName>
-              <FileType>1</FileType>
-              <FilePath>..\..\libraries\STM32H7RSxx_HAL_Driver\Src\stm32h7rsxx_hal_adc_ex.c</FilePath>
-            </File>
-            <File>
-              <FileName>stm32h7rsxx_hal_spi.c</FileName>
-              <FileType>1</FileType>
-              <FilePath>..\..\libraries\STM32H7RSxx_HAL_Driver\Src\stm32h7rsxx_hal_spi.c</FilePath>
-            </File>
-            <File>
-              <FileName>stm32h7rsxx_hal_rcc.c</FileName>
-              <FileType>1</FileType>
-              <FilePath>..\..\libraries\STM32H7RSxx_HAL_Driver\Src\stm32h7rsxx_hal_rcc.c</FilePath>
-            </File>
-            <File>
-              <FileName>system_stm32h7rsxx.c</FileName>
-              <FileType>1</FileType>
-              <FilePath>..\..\libraries\CMSIS\Device\ST\STM32H7RSxx\Source\Templates\system_stm32h7rsxx.c</FilePath>
-            </File>
-            <File>
-              <FileName>stm32h7rsxx_hal_rng.c</FileName>
-              <FileType>1</FileType>
-              <FilePath>..\..\libraries\STM32H7RSxx_HAL_Driver\Src\stm32h7rsxx_hal_rng.c</FilePath>
-            </File>
-            <File>
-              <FileName>stm32h7rsxx_hal_sram.c</FileName>
-              <FileType>1</FileType>
-              <FilePath>..\..\libraries\STM32H7RSxx_HAL_Driver\Src\stm32h7rsxx_hal_sram.c</FilePath>
+              <FilePath>..\..\libraries\STM32H7RSxx_HAL_Driver\Src\stm32h7rsxx_hal_pwr.c</FilePath>
             </File>
             <File>
               <FileName>stm32h7rsxx_hal.c</FileName>
@@ -2517,14 +2412,119 @@
               <FilePath>..\..\libraries\STM32H7RSxx_HAL_Driver\Src\stm32h7rsxx_hal.c</FilePath>
             </File>
             <File>
-              <FileName>stm32h7rsxx_hal_uart_ex.c</FileName>
+              <FileName>stm32h7rsxx_hal_usart.c</FileName>
               <FileType>1</FileType>
-              <FilePath>..\..\libraries\STM32H7RSxx_HAL_Driver\Src\stm32h7rsxx_hal_uart_ex.c</FilePath>
+              <FilePath>..\..\libraries\STM32H7RSxx_HAL_Driver\Src\stm32h7rsxx_hal_usart.c</FilePath>
+            </File>
+            <File>
+              <FileName>system_stm32h7rsxx.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\..\libraries\CMSIS\Device\ST\STM32H7RSxx\Source\Templates\system_stm32h7rsxx.c</FilePath>
+            </File>
+            <File>
+              <FileName>stm32h7rsxx_hal_cryp_ex.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\..\libraries\STM32H7RSxx_HAL_Driver\Src\stm32h7rsxx_hal_cryp_ex.c</FilePath>
+            </File>
+            <File>
+              <FileName>stm32h7rsxx_hal_sram.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\..\libraries\STM32H7RSxx_HAL_Driver\Src\stm32h7rsxx_hal_sram.c</FilePath>
             </File>
             <File>
               <FileName>stm32h7rsxx_hal_cortex.c</FileName>
               <FileType>1</FileType>
               <FilePath>..\..\libraries\STM32H7RSxx_HAL_Driver\Src\stm32h7rsxx_hal_cortex.c</FilePath>
+            </File>
+            <File>
+              <FileName>stm32h7rsxx_hal_adc.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\..\libraries\STM32H7RSxx_HAL_Driver\Src\stm32h7rsxx_hal_adc.c</FilePath>
+            </File>
+            <File>
+              <FileName>stm32h7rsxx_hal_dma_ex.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\..\libraries\STM32H7RSxx_HAL_Driver\Src\stm32h7rsxx_hal_dma_ex.c</FilePath>
+            </File>
+            <File>
+              <FileName>stm32h7rsxx_hal_crc_ex.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\..\libraries\STM32H7RSxx_HAL_Driver\Src\stm32h7rsxx_hal_crc_ex.c</FilePath>
+            </File>
+            <File>
+              <FileName>stm32h7rsxx_hal_adc_ex.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\..\libraries\STM32H7RSxx_HAL_Driver\Src\stm32h7rsxx_hal_adc_ex.c</FilePath>
+            </File>
+            <File>
+              <FileName>stm32h7rsxx_hal_cryp.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\..\libraries\STM32H7RSxx_HAL_Driver\Src\stm32h7rsxx_hal_cryp.c</FilePath>
+            </File>
+            <File>
+              <FileName>stm32h7rsxx_hal_gpio.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\..\libraries\STM32H7RSxx_HAL_Driver\Src\stm32h7rsxx_hal_gpio.c</FilePath>
+            </File>
+            <File>
+              <FileName>stm32h7rsxx_hal_rcc.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\..\libraries\STM32H7RSxx_HAL_Driver\Src\stm32h7rsxx_hal_rcc.c</FilePath>
+            </File>
+            <File>
+              <FileName>stm32h7rsxx_hal_cec.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\..\libraries\STM32H7RSxx_HAL_Driver\Src\stm32h7rsxx_hal_cec.c</FilePath>
+            </File>
+            <File>
+              <FileName>stm32h7rsxx_hal_spi.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\..\libraries\STM32H7RSxx_HAL_Driver\Src\stm32h7rsxx_hal_spi.c</FilePath>
+            </File>
+            <File>
+              <FileName>stm32h7rsxx_hal_rcc_ex.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\..\libraries\STM32H7RSxx_HAL_Driver\Src\stm32h7rsxx_hal_rcc_ex.c</FilePath>
+            </File>
+            <File>
+              <FileName>stm32h7rsxx_hal_uart_ex.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\..\libraries\STM32H7RSxx_HAL_Driver\Src\stm32h7rsxx_hal_uart_ex.c</FilePath>
+            </File>
+            <File>
+              <FileName>stm32h7rsxx_hal_flash.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\..\libraries\STM32H7RSxx_HAL_Driver\Src\stm32h7rsxx_hal_flash.c</FilePath>
+            </File>
+            <File>
+              <FileName>stm32h7rsxx_hal_flash_ex.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\..\libraries\STM32H7RSxx_HAL_Driver\Src\stm32h7rsxx_hal_flash_ex.c</FilePath>
+            </File>
+            <File>
+              <FileName>stm32h7rsxx_hal_crc.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\..\libraries\STM32H7RSxx_HAL_Driver\Src\stm32h7rsxx_hal_crc.c</FilePath>
+            </File>
+            <File>
+              <FileName>stm32h7rsxx_hal_dma.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\..\libraries\STM32H7RSxx_HAL_Driver\Src\stm32h7rsxx_hal_dma.c</FilePath>
+            </File>
+            <File>
+              <FileName>startup_stm32h7r7xx.s</FileName>
+              <FileType>2</FileType>
+              <FilePath>..\..\libraries\CMSIS\Device\ST\STM32H7RSxx\Source\Templates\arm\startup_stm32h7r7xx.s</FilePath>
+            </File>
+            <File>
+              <FileName>stm32h7rsxx_hal_uart.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\..\libraries\STM32H7RSxx_HAL_Driver\Src\stm32h7rsxx_hal_uart.c</FilePath>
+            </File>
+            <File>
+              <FileName>stm32h7rsxx_hal_xspi.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\..\libraries\STM32H7RSxx_HAL_Driver\Src\stm32h7rsxx_hal_xspi.c</FilePath>
             </File>
           </Files>
         </Group>
