--- a/projects/art_pi2_blink_touchgfx/.config
+++ b/projects/art_pi2_blink_touchgfx/.config
@@ -1219,6 +1219,8 @@ CONFIG_PKG_GT911_VER="latest"
 #
 CONFIG_SOC_STM32H7RS=y
 CONFIG_SOC_SERIES_STM32H7RS=y
+CONFIG_RT_USING_INDEPENDENT_INTERRUPT_MANAGEMENT=y
+CONFIG_RT_MAX_SYSCALL_INTERRUPT_PRIORITY=5
 
 #
 # Onboard Peripheral Drivers
